--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,6 @@ html, body {
     background-color: var(--main-background-color);
 }
 
-p, a, h1 {
-    font-family: var(--main-font-family);
-    color: var(--main-color);
-    word-break: break-all;
-}
-
 :root{
     --main-background-color: #111;
     --secondary-background-color: #223;
@@ -23,36 +17,44 @@ p, a, h1 {
     --main-font-family: "Montserrat", sans-serif;
 }
 
-.navbar{
+p, div, a, h1 {
+    color: var(--main-color);
+    font-family: var(--main-font-family);
+    margin: 0px;
+    padding: 15px;
+}
+
+.nav {
     background-color: var(--secondary-background-color);
-    padding: 20px 10px 20px 10px;
+    padding:15px;
 }
 
 .nav-item {
-    color: var(--main-color);
-    font-size:x-large;
-    font-family: var(--main-font-family);
-    margin: 2rem;
+    padding-right: 1em;
+    font-size: x-large;
     transition: color 200ms ease-in-out;
 }
 
 .nav-item:hover {
-    color: var(--hover-color);
     transition: color 200ms ease-in-out;
+    color: var(--secondary-color)
 }
+
 .selected {
     color: var(--accent-color);
     transition: color 200ms ease-in-out;
 }
 
-.title{
-    font-size: 4em;
+
+.page {
+    background-color: var(--tertiary-background-color);
+    margin: auto;
+    padding:20px;
+    min-width: 20rem;
+    max-width: 80rem;
+    min-height: fit-content;
 }
 
-.page{
-    width: 80rem;
-    margin: auto;
-    height: 100%;
-    background-color: var(--tertiary-background-color);
-    padding:10px;
+.title {
+    font-size: xx-large;
 }
